-frontend docker container finished

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,14 @@
-FROM node:18
+FROM node:20
 
 WORKDIR /app
 
-COPY package.json .
-COPY package-lock.json .
+# Copy package.json + package-lock.json first (if they exist)
+# This layer is cached, so it won't reinstall deps unless these files change
+COPY package*.json ./
+
 RUN npm install
 
+# Copy the rest of the frontend source
 COPY . .
 
 CMD ["npm", "run", "dev"]
